fix(plugins/plugin-client-common): prompt can oddly shift to left with large font sizes
Fixes #4231

--- a/plugins/plugin-client-common/web/css/static/repl.scss
+++ b/plugins/plugin-client-common/web/css/static/repl.scss
@@ -366,6 +366,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
         line-height: unset;
         letter-spacing: unset;
         margin: 0;
+        overflow-x: hidden; /* see https://github.com/IBM/kui/issues/4231 */
       }
 
       .bx--accordion__arrow {
